[gd_scene load_steps=4 format=3 uid="uid://ckvkogi4jo41k"]

[ext_resource type="PackedScene" uid="uid://ht8n7bsycg3f" path="res://scenes/ui/widgets/override_controls/OverrideSpinbox/OverrideSpinbox.tscn" id="1_ukqll"]
[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/obj_editors/BaseNodePropertyEditor/BaseNodePropertyEditor.gd" id="2_vavjd"]
[ext_resource type="PackedScene" uid="uid://dinchpfl3oh55" path="res://scenes/ui/ProjectEditor/obj_editors/WorldObjectPropertyEditor/WorldObjectPropertyEditor.tscn" id="4_wjvdl"]

[node name="BaseNodePropertyEditor" instance=ExtResource("4_wjvdl")]
script = ExtResource("2_vavjd")

[node name="PressureLabel" type="Label" parent="VBoxContainer/PropertiesList" index="2"]
layout_mode = 2
text = "Pressure:"

[node name="PressureSpinbox" parent="VBoxContainer/PropertiesList" index="3" instance=ExtResource("1_ukqll")]
layout_mode = 2
suffix = "psi"
override_tooltip_text = "Check to set pressure as a fixed, 'known' value."

[node name="ExtFlowLabel" type="Label" parent="VBoxContainer/PropertiesList" index="4"]
layout_mode = 2
text = "External Flow:"

[node name="ExtFlowSpinbox" parent="VBoxContainer/PropertiesList" index="5" instance=ExtResource("1_ukqll")]
layout_mode = 2
suffix = "gpm"
override_tooltip_text = "Check to set a 'known' external flow rate."

[connection signal="override_changed" from="VBoxContainer/PropertiesList/PressureSpinbox" to="." method="_on_pressure_spinbox_override_changed"]
[connection signal="value_changed" from="VBoxContainer/PropertiesList/PressureSpinbox" to="." method="_on_pressure_spinbox_value_changed"]
[connection signal="override_changed" from="VBoxContainer/PropertiesList/ExtFlowSpinbox" to="." method="_on_ext_flow_spinbox_override_changed"]
[connection signal="value_changed" from="VBoxContainer/PropertiesList/ExtFlowSpinbox" to="." method="_on_ext_flow_spinbox_value_changed"]
